# py_schedule

./: .gitignore  README.md  WEEK_ALGORITHM.md  parser.py  pyproject.toml  requirements.txt  sample.env  schedule.json
.github/workflows/: schedule-parser.yml
