[project]
name = "py_schedule"
version = "1.0.0"
description = "University schedule parser - extracts teacher schedules from Google Drive PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nikolay Brovko"}
]
dependencies = [
    "requests>=2.31.0",
    "pdfplumber>=0.10.3",
    "pillow>=10.0.0",
    "gdown>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"